--- a/menu.html
+++ b/menu.html
@@ -24,28 +24,73 @@
       background: white;
       z-index: -1;
     }
-    .lux-box {
-      box-shadow: 0 12px 40px rgba(0,0,0,0.3);
-      border-radius: 20px;
+    .top-bar {
+      display: flex;
+      align-items: center;
       max-width: 900px;
-      margin: 32px auto 0 auto;
-      padding: 18px 0 14px 0;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 700;
-      background: linear-gradient(90deg, black, #005f73);
+      margin: 0 auto;
+      padding: 18px 0 0 0;
+      gap: 10px;
+    }
+    .back-btn {
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      color: #fff;
+      border: none;
+      border-radius: 50px;
+      padding: 10px 22px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      cursor: pointer;
+      margin-right: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      transition: background 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 7px;
+    }
+    .back-btn:active {
+      background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
+    }
+    .menu-header-wrapper {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-width: 0;
+    }
+    .menu-title {
+      font-size: 2.3rem;
+      font-weight: 900;
+      letter-spacing: 1.2px;
+      margin: 0;
+      padding: 0 0 2px 0;
+      background: linear-gradient(90deg, #005f73 30%, #00aaff 100%);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      letter-spacing: 0.5px;
-      position: relative;
-    }
-    .lux-box .menu-title {
-      font-size: 2rem;
-      font-weight: 700;
-      margin: 0;
-      letter-spacing: 0.5px;
+      text-align: center;
+      text-shadow: 0 2px 12px rgba(0,0,0,0.10);
       font-family: 'Roboto', Arial, sans-serif;
+      line-height: 1.1;
+      word-break: break-word;
+      width: 100%;
+      max-width: 100vw;
+      overflow-wrap: break-word;
+    }
+    .menu-subtitle {
+      font-size: 1.1rem;
+      font-weight: 500;
+      color: #00796b;
+      margin-top: 2px;
+      margin-bottom: 0;
+      text-align: center;
+      letter-spacing: 0.5px;
+      opacity: 0.85;
+      font-family: 'Roboto', Arial, sans-serif;
+      width: 100%;
+      max-width: 100vw;
+      overflow-wrap: break-word;
     }
     .search-bar-container {
       max-width: 900px;
@@ -259,28 +304,32 @@
     }
     /* Cart section as floating, centered, hidden by default */
     #cart-section {
-      background: rgba(255,255,255,0.95);
-      padding: 1rem 2rem;
+      background: rgba(255,255,255,0.98);
+      padding: 1.5rem 2rem 1.5rem 2rem;
       position: fixed;
       bottom: 24px;
       left: 50%;
       transform: translateX(-50%);
-      width: auto;
+      width: 98vw;
+      max-width: 700px;
       min-width: 320px;
-      max-width: 400px;
       box-shadow: 0 4px 32px rgba(31,38,135,0.12), 0 2px 8px rgba(0, 0, 0, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.6);
-      border-radius: 18px;
+      border-radius: 22px;
       z-index: 100;
       display: none;
       flex-direction: column;
       align-items: center;
       backdrop-filter: blur(2px);
+      margin-left: auto;
+      margin-right: auto;
+      border: 2px solid #00aaff;
+      box-sizing: border-box;
     }
     #cart-items {
       width: 100%;
-      max-width: 320px;
+      max-width: 650px;
       margin: 0 auto 4px auto;
-      max-height: 100px;
+      max-height: 180px;
       overflow-y: auto;
     }
     .cart-item {
@@ -289,7 +338,7 @@
       justify-content: space-between;
       margin-bottom: 4px;
       padding: 0 12px;
-      max-width: 320px;
+      max-width: 650px;
       width: 100%;
       background: rgba(227,234,252,0.5);
       border-radius: 8px;
@@ -348,30 +397,41 @@
       letter-spacing: 0.5px;
       touch-action: manipulation;
     }
-    /* Cart icon floating button */
+    /* Cart icon floating button - BIGGER RECTANGLE */
     #cart-toggle-btn {
       position: fixed;
       bottom: 32px;
       right: 40px;
       z-index: 200;
-      font-size: 2.3rem;
-      background: #005f73;
+      font-size: 2.5rem;
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
       color: #fff;
       border: none;
-      border-radius: 50%;
-      width: 68px;
-      height: 68px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      border-radius: 22px;
+      width: 120px;
+      height: 70px;
+      box-shadow: 0 2px 16px rgba(0,0,0,0.18);
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: background 0.2s, transform 0.2s;
+      gap: 12px;
+    }
+    #cart-toggle-btn:active {
+      background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
+      transform: scale(1.04);
+    }
+    #cart-toggle-btn span {
+      font-size: 1.3rem;
+      font-weight: bold;
+      margin-left: 6px;
     }
     #cart-badge {
       display: none;
       position: absolute;
       top: 10px;
-      right: 10px;
+      right: 18px;
       background: #ff5252;
       color: #fff;
       border-radius: 50%;
@@ -383,12 +443,29 @@
       line-height: 1;
       pointer-events: none;
     }
-    /* Responsive styles */
+    @media (max-width: 900px) {
+      #cart-section {
+        max-width: 98vw;
+        min-width: 0;
+        left: 1vw;
+        right: 1vw;
+        transform: none;
+        border-radius: 18px;
+        padding: 1.2rem 1vw;
+      }
+      #cart-items {
+        max-width: 98vw;
+      }
+    }
     @media (max-width: 700px) {
-      .lux-box {
+      .top-bar {
+        padding: 12px 0 0 0;
+      }
+      .menu-header-wrapper {
+        align-items: flex-start;
+      }
+      .menu-title {
         font-size: 1.5rem;
-        padding: 12px 0 10px 0;
-        margin-top: 12px;
       }
       .search-bar-container {
         padding: 0 2vw;
@@ -426,24 +503,45 @@
         margin-bottom: 0;
       }
       #cart-toggle-btn {
-        width: 54px;
-        height: 54px;
-        font-size: 1.7rem;
+        width: 98vw;
+        min-width: 0;
+        max-width: 98vw;
+        left: 1vw;
+        right: 1vw;
         bottom: 18px;
-        right: 10px;
+        border-radius: 18px;
+        font-size: 2rem;
+        height: 60px;
+        padding: 0 0;
+        justify-content: center;
       }
       #cart-badge {
-        top: 7px;
-        right: 7px;
-        font-size: 0.95rem;
-        min-width: 16px;
+        top: 10px;
+        right: 18px;
+        font-size: 1rem;
+        min-width: 18px;
+      }
+      #cart-section {
+        left: 1vw;
+        right: 1vw;
+        width: 98vw;
+        max-width: 98vw;
+        border-radius: 18px;
+        padding: 1.2rem 1vw;
+      }
+      #cart-items {
+        max-width: 98vw;
       }
     }
     @media (max-width: 500px) {
-      .lux-box {
-        font-size: 1.3rem;
-        padding: 10px 0 8px 0;
-        margin-top: 8px;
+      .top-bar {
+        padding: 8px 0 0 0;
+      }
+      .menu-header-wrapper {
+        align-items: flex-start;
+      }
+      .menu-title {
+        font-size: 1.2rem;
       }
       .search-bar-container {
         padding: 0 1vw;
@@ -485,25 +583,52 @@
         margin: 14px 0 6px 0;
       }
       #cart-toggle-btn {
-        width: 40px;
-        height: 40px;
-        font-size: 1.1rem;
+        width: 98vw;
+        min-width: 0;
+        max-width: 98vw;
+        left: 1vw;
+        right: 1vw;
         bottom: 10px;
-        right: 5px;
+        border-radius: 14px;
+        font-size: 1.3rem;
+        height: 54px;
+        padding: 0 0;
+        justify-content: center;
       }
       #cart-badge {
-        top: 3px;
-        right: 3px;
-        font-size: 0.8rem;
-        min-width: 12px;
+        top: 8px;
+        right: 14px;
+        font-size: 0.9rem;
+        min-width: 14px;
+      }
+      #cart-section {
+        left: 1vw;
+        right: 1vw;
+        width: 98vw;
+        max-width: 98vw;
+        border-radius: 14px;
+        padding: 1rem 1vw;
+      }
+      #cart-items {
+        max-width: 98vw;
+      }
+      .back-btn {
+        padding: 8px 14px;
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
   <div class="background"></div>
-  <div class="lux-box">
-    <span class="menu-title" id="menu-header">Menu</span>
+  <div class="top-bar">
+    <button class="back-btn" onclick="window.location.href='shop-list.html'">
+      &#8592; Shop List
+    </button>
+    <div class="menu-header-wrapper">
+      <h1 class="menu-title" id="menu-header">Menu</h1>
+      <div class="menu-subtitle" id="menu-subtitle"></div>
+    </div>
   </div>
   <div class="search-bar-container">
     <input type="text" id="search-bar" placeholder="Search menu items..." autocomplete="off" />
@@ -550,15 +675,18 @@
 
     async function setHeader() {
       if (!vendorId) {
-        document.getElementById("menu-header").textContent = " Menu – Unknown Shop";
+        document.getElementById("menu-header").textContent = "Menu";
+        document.getElementById("menu-subtitle").textContent = "Unknown Shop";
         return;
       }
       const vendorRef = doc(db, "vendors", vendorId);
       const vendorSnap = await getDoc(vendorRef);
       if (vendorSnap.exists()) {
-        document.getElementById("menu-header").textContent = ` Menu – ${vendorSnap.data().name}`;
+        document.getElementById("menu-header").textContent = vendorSnap.data().name || "Menu";
+        document.getElementById("menu-subtitle").textContent = vendorSnap.data().description || "";
       } else {
-        document.getElementById("menu-header").textContent = " Menu – Unknown Shop";
+        document.getElementById("menu-header").textContent = "Menu";
+        document.getElementById("menu-subtitle").textContent = "Unknown Shop";
       }
     }
 
