--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
       background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
       color: #fff;
       border: none;
-      border-radius: 50px;
+      border-radius: 16px;
       padding: 10px 22px;
       font-size: 1.1rem;
       font-weight: bold;
@@ -47,6 +47,7 @@
       display: flex;
       align-items: center;
       gap: 7px;
+      margin-left: 8px;
     }
     .back-btn:active {
       background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
@@ -58,6 +59,7 @@
       align-items: center;
       justify-content: flex-start;
       min-width: 0;
+      padding-right: 8px;
     }
     .menu-title {
       font-size: 2.3rem;
@@ -132,6 +134,8 @@
       z-index: 20;
       box-shadow: 0 2px 12px rgba(0,0,0,0.04);
       scrollbar-width: none;
+      margin-left: 8px;
+      margin-right: 8px;
     }
     .category-bar::-webkit-scrollbar {
       display: none;
@@ -304,13 +308,14 @@
     }
     /* Cart section as floating, centered, hidden by default */
     #cart-section {
-      background: rgba(255,255,255,0.98);
+      background: #f7e9c6;
+      /* Light yellow for contrast */
       padding: 1.5rem 2rem 1.5rem 2rem;
       position: fixed;
       bottom: 24px;
       left: 50%;
       transform: translateX(-50%);
-      width: 98vw;
+      width: calc(100vw - 16px);
       max-width: 700px;
       min-width: 320px;
       box-shadow: 0 4px 32px rgba(31,38,135,0.12), 0 2px 8px rgba(0, 0, 0, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.6);
@@ -322,7 +327,7 @@
       backdrop-filter: blur(2px);
       margin-left: auto;
       margin-right: auto;
-      border: 2px solid #00aaff;
+      border: 2px solid #e0b800;
       box-sizing: border-box;
     }
     #cart-items {
@@ -388,14 +393,20 @@
       padding: 10px 24px;
       border-radius: 8px;
       border: none;
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
-      color: #fff;
+      background: linear-gradient(90deg, #e0b800 60%, #ffb300 100%);
+      color: #222;
       font-weight: bold;
       font-size: 1rem;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       letter-spacing: 0.5px;
       touch-action: manipulation;
+      margin-bottom: 0;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      width: 100%;
+      max-width: 350px;
     }
     /* Cart icon floating button - BIGGER RECTANGLE */
     #cart-toggle-btn {
@@ -404,8 +415,8 @@
       right: 40px;
       z-index: 200;
       font-size: 2.5rem;
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
-      color: #fff;
+      background: linear-gradient(90deg, #e0b800 60%, #ffb300 100%);
+      color: #005f73;
       border: none;
       border-radius: 22px;
       width: 120px;
@@ -419,7 +430,7 @@
       gap: 12px;
     }
     #cart-toggle-btn:active {
-      background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
+      background: linear-gradient(90deg, #ffb300 60%, #e0b800 100%);
       transform: scale(1.04);
     }
     #cart-toggle-btn span {
@@ -532,6 +543,13 @@
       #cart-items {
         max-width: 98vw;
       }
+      .back-btn {
+        margin-left: 4vw;
+      }
+      .category-bar {
+        margin-left: 4vw;
+        margin-right: 4vw;
+      }
     }
     @media (max-width: 500px) {
       .top-bar {
@@ -615,6 +633,11 @@
       .back-btn {
         padding: 8px 14px;
         font-size: 1rem;
+        margin-left: 4vw;
+      }
+      .category-bar {
+        margin-left: 4vw;
+        margin-right: 4vw;
       }
     }
   </style>
