--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
       display: flex;
       align-items: center;
       gap: 7px;
-      margin-left: 8px;
+      margin-left: 16px;
     }
     .back-btn:active {
       background: linear-gradient(90deg, #00aaff 60%, #005f73 100%);
@@ -134,8 +134,8 @@
       z-index: 20;
       box-shadow: 0 2px 12px rgba(0,0,0,0.04);
       scrollbar-width: none;
-      margin-left: 8px;
-      margin-right: 8px;
+      margin-left: 16px;
+      margin-right: 16px;
     }
     .category-bar::-webkit-scrollbar {
       display: none;
@@ -308,11 +308,11 @@
     }
     /* Cart section as floating, centered, hidden by default */
     #cart-section {
-      background: #f7e9c6;
-      /* Light yellow for contrast */
+      background: linear-gradient(120deg, #ff7e2d 60%, #ffb347 100%);
+      /* Orange gradient */
       padding: 1.5rem 2rem 1.5rem 2rem;
       position: fixed;
-      bottom: 24px;
+      bottom: 100px; /* Give space for cart bar */
       left: 50%;
       transform: translateX(-50%);
       width: calc(100vw - 16px);
@@ -320,14 +320,14 @@
       min-width: 320px;
       box-shadow: 0 4px 32px rgba(31,38,135,0.12), 0 2px 8px rgba(0, 0, 0, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.6);
       border-radius: 22px;
-      z-index: 100;
+      z-index: 300;
       display: none;
       flex-direction: column;
       align-items: center;
       backdrop-filter: blur(2px);
       margin-left: auto;
       margin-right: auto;
-      border: 2px solid #e0b800;
+      border: 2px solid #ff7e2d;
       box-sizing: border-box;
     }
     #cart-items {
@@ -345,7 +345,7 @@
       padding: 0 12px;
       max-width: 650px;
       width: 100%;
-      background: rgba(227,234,252,0.5);
+      background: rgba(255,255,255,0.5);
       border-radius: 8px;
       box-shadow: 0 4px 16px rgba(31, 38, 135, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.4);
     }
@@ -393,8 +393,8 @@
       padding: 10px 24px;
       border-radius: 8px;
       border: none;
-      background: linear-gradient(90deg, #e0b800 60%, #ffb300 100%);
-      color: #222;
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      color: #fff;
       font-weight: bold;
       font-size: 1rem;
       cursor: pointer;
@@ -411,15 +411,17 @@
     /* Cart icon floating button - BIGGER RECTANGLE */
     #cart-toggle-btn {
       position: fixed;
-      bottom: 32px;
-      right: 40px;
-      z-index: 200;
+      bottom: 24px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 400;
       font-size: 2.5rem;
-      background: linear-gradient(90deg, #e0b800 60%, #ffb300 100%);
-      color: #005f73;
+      background: linear-gradient(90deg, #ff7e2d 60%, #ffb347 100%);
+      color: #fff;
       border: none;
       border-radius: 22px;
-      width: 120px;
+      width: 98vw;
+      max-width: 500px;
       height: 70px;
       box-shadow: 0 2px 16px rgba(0,0,0,0.18);
       cursor: pointer;
@@ -430,7 +432,7 @@
       gap: 12px;
     }
     #cart-toggle-btn:active {
-      background: linear-gradient(90deg, #ffb300 60%, #e0b800 100%);
+      background: linear-gradient(90deg, #ffb347 60%, #ff7e2d 100%);
       transform: scale(1.04);
     }
     #cart-toggle-btn span {
@@ -465,6 +467,9 @@
         padding: 1.2rem 1vw;
       }
       #cart-items {
+        max-width: 98vw;
+      }
+      #cart-toggle-btn {
         max-width: 98vw;
       }
     }
@@ -525,6 +530,7 @@
         height: 60px;
         padding: 0 0;
         justify-content: center;
+        transform: none;
       }
       #cart-badge {
         top: 10px;
@@ -539,6 +545,7 @@
         max-width: 98vw;
         border-radius: 18px;
         padding: 1.2rem 1vw;
+        bottom: 90px;
       }
       #cart-items {
         max-width: 98vw;
@@ -612,6 +619,7 @@
         height: 54px;
         padding: 0 0;
         justify-content: center;
+        transform: none;
       }
       #cart-badge {
         top: 8px;
@@ -626,6 +634,7 @@
         max-width: 98vw;
         border-radius: 14px;
         padding: 1rem 1vw;
+        bottom: 74px;
       }
       #cart-items {
         max-width: 98vw;
@@ -668,7 +677,7 @@
     <button onclick="goToSummary()">Place Order</button>
   </div>
   <!-- Cart icon floating button -->
-  <button id="cart-toggle-btn" title="Show Cart" style="position:fixed;">
+  <button id="cart-toggle-btn" title="Show Cart">
     🛒<span id="cart-badge"></span>
   </button>
   <script type="module">
