--- a/order-status.html
+++ b/order-status.html
@@ -28,7 +28,7 @@
     .order-number {
       font-size: 1.5em;
       font-weight: bold;
-      color: #d32f2f;  /* Red color to stand out */
+      color: #d32f2f;
       text-align: center;
       margin-bottom: 20px;
       background: #ffebee;
@@ -118,12 +118,17 @@
         // Update order number
         orderNumberEl.textContent = data.orderNumber || "--";
 
+        // Check if takeaway (use deliveryOption, fallback to type for legacy)
+        const isTakeaway = (data.deliveryOption && data.deliveryOption.toLowerCase().includes("take")) ||
+                           (data.type && data.type.toLowerCase().includes("take"));
+
         // Render items
         itemsContainer.innerHTML = "";
         (data.items || []).forEach(i => {
+          const price = isTakeaway ? (i.price + 1) : i.price;
           const div = document.createElement("div");
           div.className = "item";
-          div.innerHTML = `<span>${i.name} × ${i.qty}</span><span>RM ${(i.qty * i.price).toFixed(2)}</span>`;
+          div.innerHTML = `<span>${i.name} × ${i.qty}</span><span>RM ${(i.qty * price).toFixed(2)}</span>`;
           itemsContainer.appendChild(div);
         });
 
